Fix box spacing

--- a/_sass/custom/_pdf-boxes.scss
+++ b/_sass/custom/_pdf-boxes.scss
@@ -3,13 +3,22 @@
 // .tip-box (similar style to fact boxes)
 
 @mixin custom-box-styles() {
+    box-decoration-break: clone;
+    text-indent: 0!important; // when box applied to paragraph directly
     h2, h3, h4, h5, h6 {
         font-size: 100%;
         font-style: normal;
         font-weight: bold;
         &:first-child {
             margin-top: 0;
+            padding-top: 0;
         }
+        &.pdf-no-space-above {
+            margin-top: 0;
+        }
+    }
+    ul, ol {
+        margin-bottom: 0;
     }
 }
 
@@ -33,6 +42,7 @@
     font-size: 90%; // sans-serif font is bigger visually
     margin-top: $line-height-default * 2.5; // make space for 'fact box' tab
     position: relative;
+    text-indent: 0!important; // when box applied to paragraph directly
     // Tab above box
     &::before {
         background-color: $tab-color;
